--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,12 +19,21 @@ jobs:
         with:
           submodules: 'recursive'
       
+      - uses: actions/setup-python@v6
+        with:
+          python-version: '3.13' 
+      
       - name: Build
         run: |
           mkdir build
           cd build
           cmake ..
           make
+      
+      - name: pytest
+        run: |
+          pip install pytest
+          pytest
 
 
 
